--- a/theme.css
+++ b/theme.css
@@ -618,7 +618,7 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     display: flex;
     align-items: center;
     border-radius: calc(infinity * 1px);
-    transition-property: all;
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
     --tw-duration: 200ms;
@@ -637,12 +637,6 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     padding-bottom: 8px;
     padding-left: calc(var(--spacing) * 3);
   }
-  .workspace-tab-header-inner-icon {
-    color: var(--text-on-accent);
-  }
-  .workspace-tab-header:not(.is-active) .workspace-tab-header-inner-icon {
-    color: var(--text-normal);
-  }
   .workspace-tab-header-inner-close-button {
     background-image: none;
   }
@@ -652,6 +646,9 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
   .workspace-tab-header:not(.is-active):hover .workspace-tab-header-inner {
     background-color: transparent;
     background-image: none;
+  }
+  .workspace-tab-header.is-active .workspace-tab-header-inner-icon {
+    color: var(--text-on-accent) !important;
   }
   .workspace-tab-header:not(.is-active):hover .workspace-tab-header-inner-close-button {
     border-radius: calc(infinity * 1px);
@@ -663,25 +660,40 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     height: 100%;
     align-items: center;
   }
-  .workspace-tab-header.is-active {
-    background-color: var(--tab-background-active);
-    --tw-font-weight: var(--font-weight-medium);
-    font-weight: var(--font-weight-medium);
+}
+.workspace-tab-header {
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 200ms;
+  transition-duration: 200ms;
+  --tw-ease: var(--ease-in-out);
+  transition-timing-function: var(--ease-in-out);
+}
+.workspace-tab-header.is-active {
+  background-color: var(--tab-background-active);
+  --tw-font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-medium);
+}
+.workspace-tab-header.is-active .workspace-tab-header-inner-icon {
+  color: var(--text-normal) !important;
+}
+.workspace-tab-header:not(.is-active) .workspace-tab-header-inner-icon {
+  color: var(--text-normal) !important;
+}
+.workspace-tab-header.is-active .workspace-tab-header-inner-close-button:hover {
+  border-radius: calc(infinity * 1px);
+  background-color: var(--background-primary);
+  @supports (color: color-mix(in lab, red, red)) {
+    background-color: color-mix(in oklab, var(--background-primary) 30%, transparent);
   }
-  .workspace-tab-header.is-active .workspace-tab-header-inner-close-button:hover {
-    border-radius: calc(infinity * 1px);
-    background-color: var(--background-primary);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--background-primary) 30%, transparent);
-    }
-    transition-property: all;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-    --tw-duration: 100ms;
-    transition-duration: 100ms;
-    --tw-ease: var(--ease-in-out);
-    transition-timing-function: var(--ease-in-out);
-  }
+  transition-property: all;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 100ms;
+  transition-duration: 100ms;
+  --tw-ease: var(--ease-in-out);
+  transition-timing-function: var(--ease-in-out);
 }
 .mod-sidedock {
   .workspace-tabs .workspace-tab-header-container {
@@ -811,6 +823,14 @@ body:not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-p
 }
 .nav-file-title.is-active {
   background-color: var(--text-accent);
+  color: var(--text-on-accent);
+}
+.nav-file-title.is-active .nav-file-tag {
+  border-radius: var(--radius-sm);
+  background-color: var(--background-secondary);
+  @supports (color: color-mix(in lab, red, red)) {
+    background-color: color-mix(in oklab, var(--background-secondary) 10%, transparent);
+  }
   color: var(--text-on-accent);
 }
 .nav-file-title input, .nav-folder-title input, .nav-file-title input:hover, .nav-file-title input:focus, .nav-folder-title input:hover, .nav-folder-title input:focus {
